--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,19 +2,27 @@
 # This workflow automates the build and release process for the NREGA Bot application.
 #
 # --- How it works ---
-# 1. Trigger: The workflow runs automatically when you push a new tag that starts with 'v' (e.g., v2.5.5).
-# 2. Read Info: It first reads the version number and changelog from your version.json file.
-# 3. Build in Parallel: It then builds the application for Windows, macOS, and Linux simultaneously.
-# 4. Create Release: Once all builds are successful, it creates a new GitHub Release,
-#    populates it with the changelog, and attaches all the built application files.
+# 1. Automatic Trigger: Runs when you push a new tag starting with 'v' (e.g., v2.5.5).
+# 2. Manual Trigger: Can be run manually from the GitHub Actions tab. You will be prompted for a tag.
+# 3. Read Info: It reads the version number and changelog from your version.json file.
+# 4. Build in Parallel: Builds the application for Windows, macOS, and Linux.
+# 5. Create Release: Creates a new GitHub Release with the changelog and attaches the built files.
 #
 name: Create Application Release
 
-# This workflow is triggered on pushes to tags that match the pattern 'v*.*.*'
+# --- TRIGGERS ---
 on:
+  # 1. Pushing a tag like v1.2.3
   push:
     tags:
       - 'v*.*.*'
+  # 2. Manually from the Actions tab
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'The tag to build (e.g., v2.5.5)'
+        required: true
+        default: 'v2.5.5'
 
 jobs:
   # This job reads the version and changelog to use in other jobs
@@ -22,28 +30,34 @@ jobs:
     name: Get Release Information
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.get_version.outputs.version }}
+      version: ${{ steps.get_clean_version.outputs.version }} # e.g., 2.5.5
+      tag: ${{ steps.get_tag.outputs.tag }}                   # e.g., v2.5.5
       changelog: ${{ steps.get_changelog.outputs.changelog }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # --- FIX: Install jq ---
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Get version from tag
-        id: get_version
-        # The tag is 'v2.5.5', but the JSON key is '2.5.5'. This step removes the 'v'.
-        run: echo "version=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
+      - name: Determine tag name
+        id: get_tag
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "tag=${{ inputs.tag }}" >> $GITHUB_OUTPUT
+          else
+            echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Get clean version number from tag
+        id: get_clean_version
+        run: echo "version=$(echo ${{ steps.get_tag.outputs.tag }} | sed 's/^v//')" >> $GITHUB_OUTPUT
 
       - name: Get changelog for the new version
         id: get_changelog
         run: |
-          VERSION="${{ steps.get_version.outputs.version }}"
-          # Use jq to parse the version.json and format it as markdown bullet points
+          VERSION="${{ steps.get_clean_version.outputs.version }}"
           CHANGELOG_BODY=$(jq -r --arg VERSION "$VERSION" '.changelog[$VERSION] | .[] | "- \(.)"' version.json)
-          # This is a special way to pass multiline strings between steps in GitHub Actions
           echo "changelog<<EOF" >> $GITHUB_OUTPUT
           echo "$CHANGELOG_BODY" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
@@ -69,7 +83,6 @@ jobs:
         uses: Minionguyjpro/Inno-Setup-Action@v1.0.1
 
       - name: Run Windows build script
-        # This script automatically reads the version from config.py
         run: .\build_windows.bat
 
       - name: Create Portable ZIP archive
@@ -109,7 +122,6 @@ jobs:
         run: chmod +x build_macos.sh
 
       - name: Run macOS build script
-        # This script has the version hardcoded, so we update it dynamically before running
         run: ./build_macos.sh
 
       - name: Upload macOS artifact
@@ -165,8 +177,6 @@ jobs:
           path: dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-Linux.tar.gz
 
   # --- Publish Job ---
-  # This job runs after all builds are complete.
-  # It downloads the built files and creates the GitHub Release.
   publish-release:
     name: Publish GitHub Release
     needs: [get-release-info, build-windows, build-macos, build-linux]
@@ -182,13 +192,9 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          # The release title will be e.g., "NREGA Bot v2.5.5"
-          name: NREGA Bot ${{ github.ref_name }}
-          # The release body will be populated with the changelog
+          name: NREGA Bot ${{ needs.get-release-info.outputs.tag }}
           body: ${{ needs.get-release-info.outputs.changelog }}
-          # The tag for the release will be the one you pushed
-          tag_name: ${{ github.ref_name }}
-          # Attach all the built files from the artifacts directory
+          tag_name: ${{ needs.get-release-info.outputs.tag }}
           files: |
             artifacts/windows-builds/*
             artifacts/macos-build/*
