--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,27 +90,11 @@ jobs:
         run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
         shell: bash
 
-      # Add PyInstaller build step before Inno Setup
-      - name: Build with PyInstaller
-        run: |
-          pyinstaller --noconfirm --windowed --onefile --name "NREGA Bot" `
-          --icon="assets/app_icon.ico" `
-          --add-data="logo.png;." `
-          --add-data="theme.json;." `
-          --add-data="changelog.json;." `
-          --add-data="assets;assets" `
-          --add-data=".env;." `
-          --add-data="jobcard.jpeg;." `
-          --add-data="tabs;tabs" `
-          --collect-data fpdf `
-          main_app.py
-
       - name: Install Inno Setup
-        uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
-        with:
-          path: installer.iss
+        uses: crazy-max/ghaction-inno-setup@v3
 
       - name: Run Windows build script
+        # This .bat script handles both PyInstaller and Inno Setup
         run: .\build_windows.bat
 
       - name: Create Portable ZIP archive
