--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,12 +90,25 @@ jobs:
         run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
         shell: bash
 
+      - name: Build executable with PyInstaller
+        run: |
+          pyinstaller --noconfirm --windowed --onefile --name "NREGA Bot" `
+          --icon="assets/app_icon.ico" `
+          --add-data="logo.png;." `
+          --add-data="theme.json;." `
+          --add-data="changelog.json;." `
+          --add-data="assets;assets" `
+          --add-data=".env;." `
+          --add-data="jobcard.jpeg;." `
+          --add-data="tabs;tabs" `
+          --collect-data fpdf `
+          main_app.py
+
       - name: Install Inno Setup
         uses: crazy-max/ghaction-inno-setup@v3
 
-      - name: Run Windows build script
-        # This .bat script handles both PyInstaller and Inno Setup
-        run: .\build_windows.bat
+      - name: Compile installer with Inno Setup
+        run: iscc.exe /DAppVersion=${{ needs.get-release-info.outputs.version }} installer.iss
 
       - name: Create Portable ZIP archive
         run: |
