--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,9 @@ name: Create Application Release
 
 # --- TRIGGERS ---
 on:
-  # 1. Pushing a tag like v1.2.3
   push:
     tags:
       - 'v*.*.*'
-  # 2. Manually from the Actions tab
   workflow_dispatch:
     inputs:
       tag:
@@ -25,13 +23,13 @@ on:
         default: 'v2.5.5'
 
 jobs:
-  # This job reads the version and changelog to use in other jobs
+  # --- Job: Gather release info ---
   get-release-info:
     name: Get Release Information
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.get_clean_version.outputs.version }} # e.g., 2.5.5
-      tag: ${{ steps.get_tag.outputs.tag }}                   # e.g., v2.5.5
+      version: ${{ steps.get_clean_version.outputs.version }}
+      tag: ${{ steps.get_tag.outputs.tag }}
       changelog: ${{ steps.get_changelog.outputs.changelog }}
     steps:
       - name: Checkout code
@@ -46,6 +44,7 @@ jobs:
           done
           echo "Failed to install jq after 3 attempts."
           exit 1
+
       - name: Determine tag name
         id: get_tag
         run: |
@@ -54,6 +53,7 @@ jobs:
           else
             echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
           fi
+
       - name: Get clean version number from tag
         id: get_clean_version
         run: echo "version=$(echo ${{ steps.get_tag.outputs.tag }} | sed 's/^v//')" >> $GITHUB_OUTPUT
@@ -66,7 +66,8 @@ jobs:
           echo "changelog<<EOF" >> $GITHUB_OUTPUT
           echo "$CHANGELOG_BODY" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
-  # --- Build Job for Windows ---
+
+  # --- Job: Windows Build ---
   build-windows:
     name: Build for Windows
     needs: get-release-info
@@ -87,14 +88,19 @@ jobs:
         run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
         shell: bash
 
-      # Add PyInstaller build step before Inno Setup
       - name: Build with PyInstaller
         run: |
-          pyinstaller --noconfirm --windowed --onefile --name "NREGA Bot"           --icon="assets/app_icon.ico"           --add-data="logo.png;."           --add-data="theme.json;."           --add-data="changelog.json;."           --add-data="assets;assets"           --add-data=".env;."           --add-data="jobcard.jpeg;."           --add-data="tabs;tabs"           --collect-data fpdf           main_app.py
-      - name: Install Inno Setup
-        uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
-        with:
-          path: installer.iss
+          pyinstaller --noconfirm --windowed --onefile --name "NREGA Bot" `
+          --icon="assets/app_icon.ico" `
+          --add-data="logo.png;." `
+          --add-data="theme.json;." `
+          --add-data="changelog.json;." `
+          --add-data="assets;assets" `
+          --add-data=".env;." `
+          --add-data="jobcard.jpeg;." `
+          --add-data="tabs;tabs" `
+          --collect-data fpdf `
+          main_app.py
 
       - name: Run Windows build script
         run: .\build_windows.bat
@@ -103,6 +109,7 @@ jobs:
         run: |
           $version = "${{ needs.get-release-info.outputs.version }}"
           Compress-Archive -Path dist/'NREGA Bot.exe' -DestinationPath dist/NREGABot-v$version-Windows-Portable.zip
+
       - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -110,7 +117,8 @@ jobs:
           path: |
             installer/NREGABot-v${{ needs.get-release-info.outputs.version }}-Setup.exe
             dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-Windows-Portable.zip
-  # --- Build Job for macOS ---
+
+  # --- Job: macOS Build ---
   build-macos:
     name: Build for macOS (Universal)
     needs: get-release-info
@@ -145,7 +153,7 @@ jobs:
           name: macos-build
           path: dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-macOS.dmg
 
-  # --- Build Job for Linux ---
+  # --- Job: Linux Build ---
   build-linux:
     name: Build for Linux (Portable)
     needs: get-release-info
@@ -181,24 +189,26 @@ jobs:
           --add-data="tabs:tabs" \
           --collect-data fpdf \
           main_app.py
+
       - name: Create portable archive
         run: |
           cd dist
           tar -czvf NREGABot-v${{ needs.get-release-info.outputs.version }}-Linux.tar.gz "NREGA Bot"
           cd ..
+
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-build
           path: dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-Linux.tar.gz
 
-  # --- Publish Job ---
+  # --- Job: Publish Release ---
   publish-release:
     name: Publish GitHub Release
     needs: [get-release-info, build-windows, build-macos, build-linux]
     runs-on: ubuntu-latest
     permissions:
-      contents: write # This permission is required to create a release
+      contents: write
     steps:
       - name: Download all build artifacts
         uses: actions/download-artifact@v4
