--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,127 +1,85 @@
 # .github/workflows/release.yml
-# This workflow automates the build and release process for the NREGA Bot application.
-#
-# --- How it works ---
-# 1. Automatic Trigger: Runs when you push a new tag starting with 'v' (e.g., v2.5.5).
-# 2. Manual Trigger: Can be run manually from the GitHub Actions tab. You will be prompted for a tag.
-# 3. Read Info: It reads the version number and changelog from your version.json file.
-# 4. Build in Parallel: Builds the application for Windows, macOS, and Linux.
-# 5. Create Release: Creates a new GitHub Release with the changelog and attaches the built files.
-#
 name: Create Application Release
 
-# --- TRIGGERS ---
 on:
   push:
-    tags:
-      - 'v*.*.*'
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: 'The tag to build (e.g., v2.5.5)'
-        required: true
-        default: 'v2.5.5'
+    branches:
+      - main   # runs automatically on every push to main
+  workflow_dispatch: {} # still allows manual trigger if needed
 
 jobs:
-  # --- Job: Gather release info ---
+  # Extract version & changelog
   get-release-info:
     name: Get Release Information
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.get_clean_version.outputs.version }}
-      tag: ${{ steps.get_tag.outputs.tag }}
+      version: ${{ steps.get_version.outputs.version }}
       changelog: ${{ steps.get_changelog.outputs.changelog }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install jq with retries
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      - name: Read version.json
+        id: get_version
         run: |
-          for i in 1 2 3; do
-            sudo apt-get update && sudo apt-get install -y jq && exit 0
-            echo "apt-get failed on attempt $i, retrying in 15 seconds..."
-            sleep 15
-          done
-          echo "Failed to install jq after 3 attempts."
-          exit 1
+          VERSION=$(jq -r '.version' version.json)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Determine tag name
-        id: get_tag
-        run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "tag=${{ inputs.tag }}" >> $GITHUB_OUTPUT
-          else
-            echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Get clean version number from tag
-        id: get_clean_version
-        run: echo "version=$(echo ${{ steps.get_tag.outputs.tag }} | sed 's/^v//')" >> $GITHUB_OUTPUT
-
-      - name: Get changelog for the new version
+      - name: Read changelog
         id: get_changelog
         run: |
-          VERSION="${{ steps.get_clean_version.outputs.version }}"
+          VERSION="${{ steps.get_version.outputs.version }}"
           CHANGELOG_BODY=$(jq -r --arg VERSION "$VERSION" '.changelog[$VERSION] | .[] | "- \(.)"' version.json)
           echo "changelog<<EOF" >> $GITHUB_OUTPUT
           echo "$CHANGELOG_BODY" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
-  # --- Job: Windows Build ---
+  # --- Build Job for Windows ---
   build-windows:
-      name: Build for Windows
-      needs: get-release-info
-      runs-on: windows-latest
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-  
-        - name: Set up Python
-          uses: actions/setup-python@v5
-          with:
-            python-version: '3.11'
-  
-        - name: Install dependencies
-          run: pip install -r requirements.txt
-  
-        - name: Create .env file
-          run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
-          shell: bash
-  
-        - name: Build with PyInstaller
-          run: |
-            pyinstaller --noconfirm --windowed --onefile --name "NREGA Bot" `
-            --icon="assets/app_icon.ico" `
-            --add-data="logo.png;." `
-            --add-data="theme.json;." `
-            --add-data="changelog.json;." `
-            --add-data="assets;assets" `
-            --add-data=".env;." `
-            --add-data="jobcard.jpeg;." `
-            --add-data="tabs;tabs" `
-            --collect-data fpdf `
-            main_app.py
-  
-        - name: Run Windows build script
-          run: .\build_windows.bat
-          env:
-            APP_VERSION: ${{ needs.get-release-info.outputs.version }}
-  
-        - name: Create Portable ZIP archive
-          run: |
-            $version = "${{ needs.get-release-info.outputs.version }}"
-            Compress-Archive -Path dist/'NREGA Bot.exe' -DestinationPath dist/NREGABot-v$version-Windows-Portable.zip
-  
-        - name: Upload Windows artifacts
-          uses: actions/upload-artifact@v4
-          with:
-            name: windows-builds
-            path: |
-              installer/NREGABot-v${{ needs.get-release-info.outputs.version }}-Setup.exe
-              dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-Windows-Portable.zip
-  
+    name: Build for Windows
+    needs: get-release-info
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  # --- Job: macOS Build ---
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Create .env file
+        run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
+        shell: bash
+
+      - name: Run Windows build script
+        run: |
+          set APP_VERSION=${{ needs.get-release-info.outputs.version }}
+          call build_windows.bat
+
+      - name: Debug - List installer directory
+        run: dir installer
+
+      - name: Create Portable ZIP archive
+        run: |
+          $version = "${{ needs.get-release-info.outputs.version }}"
+          Compress-Archive -Path dist/'NREGA Bot.exe' -DestinationPath dist/NREGABot-v$version-Windows-Portable.zip
+
+      - name: Upload Windows artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-builds
+          path: |
+            installer/*.exe
+            dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-Windows-Portable.zip
+
+  # --- Build Job for macOS ---
   build-macos:
     name: Build for macOS (Universal)
     needs: get-release-info
@@ -156,7 +114,7 @@ jobs:
           name: macos-build
           path: dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-macOS.dmg
 
-  # --- Job: Linux Build ---
+  # --- Build Job for Linux ---
   build-linux:
     name: Build for Linux (Portable)
     needs: get-release-info
@@ -165,7 +123,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Linux dependencies for PyInstaller
+      - name: Install Linux dependencies
         run: sudo apt-get update && sudo apt-get install -y libfuse2
 
       - name: Set up Python
@@ -173,9 +131,9 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: pip install -r requirements.txt
-      
+
       - name: Create .env file
         run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
 
@@ -205,7 +163,7 @@ jobs:
           name: linux-build
           path: dist/NREGABot-v${{ needs.get-release-info.outputs.version }}-Linux.tar.gz
 
-  # --- Job: Publish Release ---
+  # --- Publish Release ---
   publish-release:
     name: Publish GitHub Release
     needs: [get-release-info, build-windows, build-macos, build-linux]
@@ -221,9 +179,9 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          name: NREGA Bot ${{ needs.get-release-info.outputs.tag }}
+          name: NREGA Bot v${{ needs.get-release-info.outputs.version }}
           body: ${{ needs.get-release-info.outputs.changelog }}
-          tag_name: ${{ needs.get-release-info.outputs.tag }}
+          tag_name: v${{ needs.get-release-info.outputs.version }}
           files: |
             artifacts/windows-builds/**/*
             artifacts/macos-build/*
