Update release.yml to include permissions
Added permissions for contents and actions in release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,10 @@ on:
       - main
   workflow_dispatch: {}
 
+permissions:
+  contents: write     # required for releases
+  actions: write      # required for artifact cleanup
+
 jobs:
   # --- Extract version & changelog ---
   get-release-info:
